add toggling todo/done

--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
     <h1>Simple ToDo App</h1>
     <div>
         <input id="input" type="text" value="" placeholder="task name " />
-        <button id="button" type="button">ADD</button>
+        <button id="add_button" type="button">ADD</button>
     </div>
     <div class="todo_list">
         <p>ToDo</p>
         <ul id="todo_ul" class="todo">
-            <li>今月の家賃を支払う</li>
         </ul>
     </div>
     <div class="todo_list">
         <p>Done</p>
         <ul id="done_ul" class="done">
-            <li>洗剤を買う</li>
-            <li>本棚を掃除する</li>
         </ul>
     </div>
+    <button id="todo_clear_button" class="clear" type="button">CLEAR ToDo</button>
+    <button id="done_clear_button" class="clear" type="button">CLEAR Done</button>
     <script type="text/javascript" src="out/production/TodoApp/TodoApp.js"></script>
 </body>
 </html>
